--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -357,13 +357,10 @@
     </div>
     <div id="wrap">
     <div class="logo">	  
-      <a href="https://buananetpbun.github.io"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> <img style="float:right; padding-top:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits"/>
+      <a href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> <img style="float:right; padding-top:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits"/>
     </div>
     <div class="header">
-      <span style="float:left; display:inline;margin-right:6px; margin-top: 10px">
-      <a href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html"><img src="https://buananetpbun.github.io/mikrotik/img/logo.png" alt="HOME"></a>
-      </span>
-      <h1>MIKROTIK ROUTER-OS BACKUP TO MAIL SCRIPT GENERATOR</h1>
+      <h1>MIKROTIK ROUTER-OS <span style='color:#ff6600;'>BACKUP TO MAIL</span> SCRIPT GENERATOR</h1>
     </div>
     <div class="main-wrap">
       <div class="sidebar">
