--- a/pcc.html
+++ b/pcc.html
@@ -369,7 +369,7 @@
           <div style="float:left; width:130px;">
             <label>Your ISP Line</label><br>
             <select style="margin-top:10px; width:100%" id="wan-list" onchange="myFunctionOuput()">
-              <option disabled value="line2">2 Line ISP</option>
+              <option value="line2">2 Line ISP</option>
               <option disabled value="line3">3 Line ISP</option>
               <option disabled value="line4">4 Line ISP</option>
               <option disabled value="line5">5 Line ISP</option>
@@ -380,7 +380,7 @@
             <label>ROS Version</label>
             <select style="margin-top:10px; width:100%" id="ros-list" onchange="myFunctionOuput()">
               <option value="ros6">ROS v6.xx</option>
-              <option value="ros7">ROS v7.xx</option>
+              <option disabled value="ros7">ROS v7.xx</option>
             </select>
           </div>
           <div style="clear:both"></div>
