--- a/pcc.html
+++ b/pcc.html
@@ -380,7 +380,7 @@
             <label>ROS Version</label>
             <select style="margin-top:10px; width:100%" id="ros-list" onchange="myFunctionOuput()">
               <option value="ros6">ROS v6.xx</option>
-              <option disabled value="ros7">ROS v7.xx</option>
+              <option value="ros7">ROS v7.xx</option>
             </select>
           </div>
           <div style="clear:both"></div>
