--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -373,10 +373,10 @@
           <label>Select Number Your ISP Line</label>
           <select style="margin-top:10px" id="wan-list" onchange="myFunctionShowHide(); myFunction()">
             <option value="line-2">2 Line ISP</option>
-            <option value="line-3">3 Line ISP</option>
-            <option value="line-4">4 Line ISP</option>
-            <option value="line-5">5 Line ISP</option>
-            <option value="line-6">6 Line ISP</option>
+            <option disabled value="line-3">3 Line ISP</option>
+            <option disabled value="line-4">4 Line ISP</option>
+            <option disabled value="line-5">5 Line ISP</option>
+            <option disabled value="line-6">6 Line ISP</option>
           </select>
           <div style="float:left; width:120px;">
             <label>Identity ISP-1</label>
