--- a/mirkotik-indonesia-timezone.html
+++ b/mirkotik-indonesia-timezone.html
@@ -406,8 +406,8 @@
             <option value="33">Papua</option>
             <option value="34">Papua Barat</option>
           </select>
-          <span style="margin-left:10px">Regional Area [ </span> </span>
-          <span style="color:green;"><span id="input-regional">Asia/Jakarta (+07:00 WIB)</span> ]</span>
+          <span style="margin-left:10px">Regional Area </span>
+          <span style="color:green;">[ <span id="input-regional">Asia/Jakarta (+07:00 WIB)</span> ]</span>
           </select>
           <div style="margin-top:10px"></div>
           <div class="list-mangle">
