--- a/index.html
+++ b/index.html
@@ -442,7 +442,8 @@ cursor: pointer;
 		<p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Website Script Generator</a> - Mikrotik Block Website Script Generator Use DNS, Layer-7, Filter or RAW Content, Filter or RAW TLS-Host, Address List and Web Proxy</p>
 		<p><a target="_blank"  href="https://buananetpbun.github.io/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login Script Generator</a> - Wifi.id WMS and Seamless Auto Login Script Generator For Mikrotik RouterOS</p>
 		<p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html">Auto Backup To Mail Script Generator</a> - Mikrotik Auto Backup To Mail Script Generator For RouterOS</p>
-				
+	    <p><a target="_blank"  href="https://buananetpbun.github.io/mirkotik-indonesia-timezone.html">Indonesia Time Zone NTP/SNTP Generator</a> - Mikrotik Indonesia Time Zone NTP/SNTP Generator For RouterOS</p>
+		
 	    <h3>// MIKROTIK BATCH TOOLS BY BUANANET.PBUN</h3>
 		<p><a target="_blank"  href="https://github.com/buananetpbun/FREE-DNS-PING-TEST-DOS-BATCH">Batch: DNS Ping Test</a> - Free DNS Ping Test From DOS Batch</p>
 		<p><a target="_blank"  href="https://github.com/buananetpbun/mikrotik-port-scanner">Batch: Winbox Port Scanner</a> - Just a simple test for routeros port scanning</p>
