--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -360,7 +360,7 @@
       <a href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> <img style="float:right; padding-top:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits"/>
     </div>
     <div class="header">
-      <h1>MIKROTIK ROUTER-OS <span style='color:#ff6600;'>BACKUP TO MAIL</span> SCRIPT GENERATOR ROS v6.xx</h1>
+      <h1>MIKROTIK ROUTEROS <span style='color:#ff6600;'>BACKUP TO MAIL</span> SCRIPT GENERATOR - ROS v6.xx</h1>
     </div>
     <div class="main-wrap">
       <div class="sidebar">
