--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -20,7 +20,7 @@
     <style>
       /* -----------------------------------------------------------------
       ####################################################################
-      # MIKROTIK ROUTER-OS BACKUP TO MAIL SCRIPT GENERATOR
+      # MIKROTIK ROUTER-OS AUTO BACKUP TO MAIL SCRIPT GENERATOR
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://github.com/buananetpbun
       # Site      : http://www.o-om.com
@@ -361,7 +361,7 @@
       <a href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> <img style="float:right; padding-top:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits"/>
     </div>
     <div class="header">
-      <h1>MIKROTIK ROUTEROS <span style='color:#ff6600;'>BACKUP TO MAIL</span> SCRIPT GENERATOR</h1>
+      <h1>MIKROTIK ROUTER-OS <span style='color:#ff6600;'>AUTO BACKUP TO MAIL</span> SCRIPT GENERATOR</h1>
     </div>
     <div class="main-wrap">
       <div class="sidebar">
@@ -418,7 +418,7 @@
               <td>
                 <span style="color:#ff6600;">
                 ###################################################<br>
-                # Mikrotik RouterOS Backup to Mail Generator<br>
+                # Mikrotik RouterOS Auto Backup to Mail Generator<br>
                 # Date/Time: <span id="tanggalwaktu"></span><br>
                 # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
                 ###################################################<br>
