--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -398,7 +398,7 @@
             <option value="routing">Routing BGP, RIF, etc. (.rsc)</option>
           </select>
           <label>Send Backup File To Your Mail</label>
-          <input style='margin-top:5px' type="text" id="input-to-mail" value="" placeholder="mail@your-mail.com">
+          <input style='margin-top:5px' type="text" id="input-to-mail" value="" placeholder="your-mail@gmail.com">
           <label>Router Description / Mail Title</label>
           <input type="text" id="input-mail-from" value="" placeholder="Backup From My Router">
           <label >Scheduler Sending Mail</label><br><span style='color:#ff6600;font-size:13px'>d (day) : 1d, 3d, 7d, 14d, 20d, 30d</span>
