--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -455,15 +455,15 @@
             Finaly test from your Browser <a target="_blank" href="https://api.telegram.org/bot<TOKEN>/sendMessage?chat_id=<CHAT_ID>&text=Hello%20World">https://api.telegram.org/bot&lt;TOKEN&gt;/sendMessage?chat_id=&lt;CHAT_ID&gt;&text=Hello%20World</a>
           </div>
           <div id="help-whatsapp" style="display:none;font-size:12px; text-align:left">       
-            <br><br><b>HOW TO GET WHATSAPP API KEY:</b><br>
-            --------------------------------------------<br>
+            <br><br><b>HOW TO GET WHATSAPP API KEY - <span style="color:yellow">( Free 3 days and 1$/Month )</span></b><br>
+            -----------------------------------------------------------------------<br>
             1. Go to <a target="_blank" href="https://textmebot.com">https://textmebot.com</a> and click Request ApiKey or fast link to <a target="_blank" href="https://textmebot.com/cancel/#lepopup-NewApiKey">#lepopup-NewApiKey</a><br>
             2. Add your <span style="color:yellow">Email Address</span> and then check your Email.<br>
             3. Save your textmebot link like example:<span style="color:yellow">https://api.textmebot.com/addphone.php?apikey=APIKEY</span> for access to textmebot web account<br>
             4. Add your Phone <span style="color:yellow">Whatsapp Number</span> with country code example: <span style="color:yellow">+628132829xxxx</span> (for Indonesia)<br>
             4. Connect your Whatsapp Number to the API with Barcode Scan.<br>
             6. You can use this API Key to test the service during <span style="color:yellow">3 days</span>. If you like it, you can subscribe using this link: <a target="_blank" href="https://textmebot.com/#prices">https://textmebot.com/#prices</a><br>
-            7. Only with <span style="color:yellow">$1/month</span> and payment subscribe with <span style="color:yellow">PayPal</span><br>
+            7. Only with <span style="color:yellow">$1/Month</span> and payment subscribe with <span style="color:yellow">PayPal</span><br>
           </div>
           <div id="help-sms" style="display:none;font-size:12px; text-align:left">       
             <br><br><b>SET YOUR MIKROTIK AS SMS SERVER :</b><br>
