--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ cursor: pointer;
             </a>
          </div>
          <div style="margin-top:20px; text-align:center; font-size:14px">
-            © Copyright 2020-2022 <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Creator by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
+            © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Creator by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
          </div>
       </div>
       <div id="myModal" class="modal">
@@ -578,6 +578,7 @@ cursor: pointer;
          </div>
       </div>
       <script>
+	  document.getElementById("year").innerHTML = new Date().getFullYear();
          var modal = document.getElementById("myModal");
          var span = document.getElementsByClassName("close")[0];
          function callmodal() {
