--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -417,7 +417,7 @@
       </div>
       <div class="footer">
         <div style="margin-top:0px; text-align:center">
-          © Copyright 2020-2022 <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a> - Made for <a target="_blank" href="https://www.mikrotik.com">MikroTik RouterOS</a>
+          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a> - Made for <a target="_blank" href="https://www.mikrotik.com">MikroTik RouterOS</a>
         </div>
       </div>
     </div>
@@ -440,6 +440,7 @@
       </div>
     </div>
     <script>
+	document.getElementById("year").innerHTML = new Date().getFullYear();
       var modal = document.getElementById("myModal");
       var span = document.getElementsByClassName("close")[0];
       function callmodal() {
