--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -830,7 +830,7 @@ if ($a != "") do={[
             </table>
          </div>
          <div class="footer">
-            © Copyright 2020-2022 <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a> - Made for <a target="_blank" href="https://www.mikrotik.com">MikroTik RouterOS</a>
+            © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a> - Made for <a target="_blank" href="https://www.mikrotik.com">MikroTik RouterOS</a>
          </div>
       </div>
       <div id="myModal" class="modal">
@@ -852,6 +852,7 @@ if ($a != "") do={[
          </div>
       </div>
       <script>
+	  document.getElementById("year").innerHTML = new Date().getFullYear();
          var modal = document.getElementById("myModal");
          var span = document.getElementsByClassName("close")[0];
          function callmodal() {
