--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -488,7 +488,7 @@
           Expired for Hotspot Voucher, you can use only for Hotspot monthly.<br>
           3. You can set manual isolation for Static-IP, just input user IP at Firewall -> Address Lists -> EXPIRED<br>
           <br>
-          <br>© Copyright 2020-2022 <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
+          <br>© Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         </div>
         <span style="color:#ff6600; font-weight:bold"># This Script for remove all Script from this Generator:</span><br>
         /ip proxy set enabled=no port=8080 max-cache-size=none <br>
@@ -522,6 +522,7 @@
       </div>
     </div>
     <script>
+	document.getElementById("year").innerHTML = new Date().getFullYear();
       var modal = document.getElementById("myModal");
       var span = document.getElementsByClassName("close")[0];
       function callmodal() {
