--- a/mikrotik-share-user-multi-login.html
+++ b/mikrotik-share-user-multi-login.html
@@ -446,7 +446,7 @@
       </div>
     </div>
     <div class="footer">
-      © Copyright 2020-2022 <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a> - Made for <a target="_blank" href="https://www.mikrotik.com">MikroTik RouterOS</a>
+      © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a> - Made for <a target="_blank" href="https://www.mikrotik.com">MikroTik RouterOS</a>
     </div>
     <div id="myModal" class="modal">
       <div class="modal-content">
@@ -467,6 +467,7 @@
       </div>
     </div>
     <script>
+	document.getElementById("year").innerHTML = new Date().getFullYear();
       var modal = document.getElementById("myModal");
       var span = document.getElementsByClassName("close")[0];
       function callmodal() {
