--- a/vpn-game-generator.html
+++ b/vpn-game-generator.html
@@ -857,7 +857,7 @@
       </div>
       <div class="footer">
         <div style="float:right">
-          © Copyright 2020-2022 <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
+          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         </div>
         <span style="color:#ff6600">
         <b># This Script for remove all Script from this Generator</b></span><br>
@@ -887,6 +887,7 @@
       </div>
     </div>
     <script>
+	document.getElementById("year").innerHTML = new Date().getFullYear();
       var modal = document.getElementById("myModal");
       var span = document.getElementsByClassName("close")[0];
       function callmodal() {
