--- a/vpn-game-generator2.html
+++ b/vpn-game-generator2.html
@@ -853,7 +853,7 @@
       </div>
       <div class="footer">
         <div style="float:right">
-          © Copyright 2020-2022 <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
+          © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
         </div>
         <span style="color:#ff6600"><b># This Script for remove all Script from this Generator:</b></span><br>
         /interface pptp-client remove [find comment="VPN-GAME"]<br>
@@ -884,6 +884,7 @@
       </div>
     </div>
     <script>
+	document.getElementById("year").innerHTML = new Date().getFullYear();
       var modal = document.getElementById("myModal");
       var span = document.getElementsByClassName("close")[0];
       function callmodal() {
