--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -446,7 +446,7 @@
             2. Send <span style="color:yellow">/newbot</span><br>
             3. Create name like this -> Example: <span style="color:yellow">YourName_bot</span> and input again with same name <span style="color:yellow">YourName_bot</span><br>
             4. Save your Token / API -> Example: <span style="color:yellow">5633162xxx:AAFU1dsXcARJlAH_jJmvF1D4Bp8LLTLJjaA</span><br>
-            5. Open on browser <a target="_blank" href="https://t.me/&lt;YourName_bot&gt;">https://t.me/&lt;YourName_bot&gt;</a><br><br>
+            5. Open on browser <a target="_blank" href="t.me/&lt;YourName_bot&gt;">t.me/&lt;YourName_bot&gt;</a><br><br>
             <b>HOT TO GET CHAT ID TELEGRAM :</b><br>
             ----------------------------------------------------<br>
             1. Search in your Telegram <span style="color:yellow">@get_id_bot</span> or <a target="_blank" href="https://t.me/get_id_bot">https://t.me/get_id_bot</a><br>
