--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -446,13 +446,14 @@
             2. Send <span style="color:yellow">/newbot</span><br>
             3. Create name like this -> Example: <span style="color:yellow">YourName_bot</span> and input again with same name <span style="color:yellow">YourName_bot</span><br>
             4. Save your Token / API -> Example: <span style="color:yellow">5633162xxx:AAFU1dsXcARJlAH_jJmvF1D4Bp8LLTLJjaA</span><br>
-            5. Open on browser <a target="_blank" href="https://t.me/&lt;YourName_bot&gt;">https://t.me/&lt;YourName_bot&gt;</a><br><br>
+			5. Open on Browser for test <a target="_blank" href="https://t.me/YourName_bot;">https://t.me/YourName_bot</a><br><br>
             <b>HOT TO GET CHAT ID TELEGRAM :</b><br>
             ----------------------------------------------------<br>
             1. Search in your Telegram <span style="color:yellow">@get_id_bot</span> or <a target="_blank" href="https://t.me/get_id_bot">https://t.me/get_id_bot</a><br>
             2. Send <span style="color:yellow">/start</span><br>
-            3. Save your Chat ID like this -> Example: <span style="color:yellow">5537582xxx</span><br><br>
-            Finaly test from your Browser <a target="_blank" href="https://api.telegram.org/bot<TOKEN>/sendMessage?chat_id=<CHAT_ID>&text=Hello%20World">https://api.telegram.org/bot&lt;TOKEN&gt;/sendMessage?chat_id=&lt;CHAT_ID&gt;&text=Hello%20World</a>
+            3. Save your Chat ID like this -> Example: <span style="color:yellow">5537582xxx</span><br>
+            5. Open on Browser <a target="_blank" href="https://api.telegram.org/bot&lt;TOKEN&gt;/getUpdates">https://api.telegram.org/&lt;TOKEN&gt;/getUpdates</a><br><br>
+			Finaly test from your Browser <a target="_blank" href="https://api.telegram.org/bot<TOKEN>/sendMessage?chat_id=<CHAT_ID>&text=Hello%20World">https://api.telegram.org/bot&lt;TOKEN&gt;/sendMessage?chat_id=&lt;CHAT_ID&gt;&text=Hello%20World</a>
           </div>
           <div id="help-whatsapp" style="display:none;font-size:12px; text-align:left">       
             <br><br><b>HOW TO GET WHATSAPP API KEY - <span style="color:yellow">( Free 3 days and 1$/Month )</span></b><br>
