--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -402,7 +402,7 @@
           <label>Router Description / e-Mail Title</label>
           <input type="text" id="input-mail-from" value="" placeholder="Backup From My Router">
           <label >Scheduler Sending e-Mail</label><br><span style='color:#ff6600;font-size:13px'>d (day) : 1d, 3d, 7d, 14d, 20d, 30d</span>
-          <input style='margin-top:5px' type="text" id="input-scheduler" value="" placeholder="7d">
+          <input style='margin-top:5px' type="text" id="input-scheduler" value="7d" placeholder="7d">
         </div>
         <button style="margin-top:0px;" type="button" onclick="myFunctionInput()">Generate</button>
         <div style="clear: both;"></div>
