--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -446,7 +446,7 @@
             2. Send <span style="color:yellow">/newbot</span><br>
             3. Create name like this -> Example: <span style="color:yellow">YourName_bot</span> and input again with same name <span style="color:yellow">YourName_bot</span><br>
             4. Save your Token / API -> Example: <span style="color:yellow">5633162xxx:AAFU1dsXcARJlAH_jJmvF1D4Bp8LLTLJjaX</span><br>
-			5. Open on Browser for test <span style="color:yellow">https://t.me/YourName_bot</span></a> or search in your Telegram <span style="color:yellow">YourName_bot</span> and then click  <span style="color:yellow">START</span> Button<br><br>
+			5. Search in your Telegram <span style="color:yellow">YourName_bot</span> and then click  <span style="color:yellow">START</span> Button<br><br>
             <b>HOT TO GET CHAT ID TELEGRAM :</b><br>
             ----------------------------------------------------<br>
             1. Search in your Telegram <span style="color:yellow">@get_id_bot</span> or <a target="_blank" href="https://t.me/get_id_bot">https://t.me/get_id_bot</a><br>
