--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -452,7 +452,7 @@
             1. Search in your Telegram <span style="color:yellow">@get_id_bot</span> or <a target="_blank" href="https://t.me/get_id_bot">https://t.me/get_id_bot</a><br>
             2. Send <span style="color:yellow">/start</span><br>
             3. Save your <span style="color:yellow">Chat ID</span> like this -> Example: <span style="color:yellow">5537582xxx</span><br><br>
-			Finaly test from your Browser <a target="_blank" href="https://api.telegram.org/bot<TOKEN>/sendMessage?chat_id=<CHAT_ID>&text=Hello%20World">https://api.telegram.org/bot&lt;TOKEN&gt;/sendMessage?chat_id=&lt;CHAT_ID&gt;&text=Hello%20World</a>
+			Finaly test from your Browser <a target="_blank" href="https://api.telegram.org/bot<TOKEN>/sendMessage?chat_id=<CHAT_ID>&text=Hello%20World">https://api.telegram.org/bot<span style="color:white !impportant; font-weight:bold">&lt;TOKEN&gt;</span>/sendMessage?chat_id=<span style="color:white !impportant; font-weight:bold">&lt;</span>CHAT_ID&gt;&text=Hello%20World</a>
           </div>
           <div id="help-whatsapp" style="display:none;font-size:12px; text-align:left">       
             <br><br><b>HOW TO GET WHATSAPP API KEY - <span style="color:yellow">( Free 3 days and 1$/Month )</span></b><br>
