--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -445,7 +445,7 @@
             1. Search in your Telegram <span style="color:yellow">@BotFather</span> or <a target="_blank" href="https://t.me/BotFather">https://t.me/BotFather</a><br>
             2. Send <span style="color:yellow">/newbot</span><br>
             3. Create name like this -> Example: <span style="color:yellow">YourName_bot</span> and input again with same name <span style="color:yellow">YourName_bot</span><br>
-            4. Save your Token / API -> Example: <span style="color:yellow">5633162xxx:AAFU1dsXcARJlAH_jJmvF1D4Bp8LLTLJjaX</span><br>
+            4. Save your <span style="color:yellow">TOKEN / BOT / API</span> -> Example: <span style="color:yellow">5633162xxx:AAFU1dsXcARJlAH_jJmvF1D4Bp8LLTLJjaX</span><br>
 			5. Search in your Telegram <span style="color:yellow">@YourName_bot</span> and then click  <span style="color:yellow">START</span> Button<br><br>
             <b>HOT TO GET CHAT ID TELEGRAM :</b><br>
             ----------------------------------------------------<br>
